# cashflow

./: .coverage  .gitignore  Untitled.ipynb  __init__.py  cashflow.txt  cashflows.json  pyproject.toml  setup.py  test_proj.db  write.py
cashflow/: __init__.py  test_cashflow.py
cashflow.egg-info/: PKG-INFO  SOURCES.txt
cashflow/ui/: server.py
cashflow/ui/pages/: index.html
planning/: description format.txt
tests/: test_cashflow.py  test_qc_multi_year_salary.py  test_qc_salary.py  test_salary_cashflow.py  test_server.py
