[project]
name = "cashflow"
version = "1.2"
description = "Python library to generate future cashflows for budgeting."
authors = [
    { name = "David de Koning", email = "david.dekoning@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "lark-parser",
    "ruff>=0.14.10",
]

[tool.uv]
# uv-specific settings can go here

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.setuptools]
packages = ["cashflow"]
